# cv-adapt

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  main.yml
.openhands/microagents/: repo.md
cv_adapter/: cv_adapt.py
cv_adapter/core/: application.py  async_application.py
cv_adapter/dto/: __init__.py  cv.py  language.py  mapper.py
cv_adapter/models/: constants.py  context.py  core_competence.py  cv.py  generators.py  language.py  language_context.py  language_context_models.py  personal_info.py  summary.py  validators.py
cv_adapter/renderers/: __init__.py  base.py  base_markdown_renderer.py  core_competences_renderer.py  jinja.py  json_renderer.py  markdown.py  markdown_list_renderer.py  markdown_renderer.py  minimal_markdown_renderer.py  pdf.py  typst.py  yaml_renderer.py
cv_adapter/services/: competence_analyzer.py  competence_generator.py  cv_adapter.py  cv_storage.py  description_generator.py  education_generator.py  experience_generator.py  skills_generator.py  summary_generator.py  title_generator.py
docs/: CV_GENERATION_INTEGRATION_PLAN.md  SQLMODEL_MIGRATION_PLAN.md  index.md
docs/explanation/: architecture.md  design-principles.md  frontend-architecture.md  index.md  multilingual-system.md  persistence.md
docs/how-to/: custom-renderers.md  frontend-testing.md  implement-job-catalog.md  index.md  language-support.md  msw-handler-generation.md  testing-generators.md
docs/reference/: index.md
docs/reference/api/: auth.md  (+6 more)
docs/tutorials/: index.md  quickstart.md  web-interface.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: test_application.py  test_competence_analyzer.py  test_competence_generator.py  test_cv_adapt.py  test_cv_language.py  test_cv_models.py  test_cv_storage.py  test_description_generator.py  test_education_generator.py  test_experience_generator.py  test_generator_models.py  test_language.py  test_minimal_cv.py  test_renderers.py  test_skills_generator.py  test_summary_generator.py  test_title_generator.py
tests/core/: test_application.py  test_async_application.py
tests/dto/: test_mapper.py
tests/models/: test_components.py  test_core_competence.py  test_cv.py  test_cv_language_context_models.py  test_language.py  test_language_context.py  test_language_context_models.py  test_validators.py
tests/renderers/: test_jinja.py  test_json_renderer.py  test_json_schema_generator.py  test_markdown.py  test_pdf_renderer.py  test_yaml_renderer.py
tests/services/: test_cv_storage.py
web-interface/backend/: alembic.ini  requirements.txt
web-interface/frontend/: .eslintrc.cjs  .gitignore  .prettierrc.json  IMPLEMENTATION_PLAN.md  README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.js  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.workspace.ts
(+512 files in other folders)
