[project]
name = "cv-adapt"
version = "0.1.0"
description = "Application for adapting CV and generating cover letters based on job descriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.2",
    "pydantic-ai>=0.0.18",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
