[project]
name = "cv-adapt"
version = "0.1.0"
description = "Application for adapting CV and generating cover letters based on job descriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-langdetect>=0.2.4",
    "jinja2>=3.1.5",
    "jsonschema>=4.23.0",
    "pydantic>=2.5.2",
    "pydantic-ai>=0.0.18",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cv_adapter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20241230",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "logfire>=3.2.0",
    "pydantic-ai[logfire]>=0.0.19",
    "pydantic-to-typescript>=2.0.0",
    "types-passlib>=1.7.7.20241221",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "pytest-asyncio>=0.25.3",
    "types-jsonschema>=4.23.0.20241208",
]
backend = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.37",
    "uvicorn>=0.34.0",
]
